# CRM-MyPipelineHero

./: .gitattributes  .gitignore  Makefile  README.md
backend/: .env.example  compose.yaml  conftest.py  manage.py  pyproject.toml
backend/apps/: __init__.py
backend/apps/common/: __init__.py  celery.py
backend/apps/common/admin/: __init__.py
backend/apps/common/choices/: __init__.py
backend/apps/common/db/: __init__.py
backend/apps/common/outbox/: __init__.py  apps.py  models.py
backend/apps/common/services.py/: __init__.py
backend/apps/common/tenancy/: __init__.py  apps.py  exceptions.py  managers.py  models.py  utils.py
backend/apps/common/tenancy/tests/: test_isolation_guardrail.py  test_manager_surface.py  test_utils.py
backend/apps/common/tests/: __init__.py  test_health.py
backend/apps/common/utils/: __init__.py  health_urls.py
backend/apps/operations/locations/: __init__.py  admin.py  apps.py  models.py
backend/apps/operations/locations/migrations/: 0001_initial.py
backend/apps/operations/locations/tests/: test_models.py
backend/apps/platform/: __init__.py
backend/apps/platform/accounts/: __init__.py  admin.py  apps.py  middleware.py  models.py  signals.py  user_display.py
backend/apps/platform/accounts/migrations/: 0001_initial.py
backend/apps/platform/accounts/services/: __init__.py  _audit.py  _register.py  exceptions.py
backend/apps/platform/accounts/tests/: _helpers.py  conftest.py  test_log_scrubbing.py  test_mfa_end_to_end.py  test_middleware.py  test_record_auth_event_service.py  test_signals.py  test_user_display.py  test_user_model.py  tests_register_local_user_service.py
backend/apps/platform/audit/: __init__.py  apps.py  confest.py  models.py  services.py
backend/apps/platform/organizations/: __init__.py  admin.py  apps.py  models.py  scope_models.py
backend/apps/platform/organizations/migrations/: 0001_Initial.py  0001_initial.py  0002_membershipscopeassignment.py  0002_rename_platform_or_user_id_org_idx_platform_or_user_id_875b18_idx_and_more.py
backend/apps/platform/organizations/services/: __init__.py  _create.py  exceptions.py
backend/apps/platform/organizations/tests/services/: test_assign_owner_membership.py  test_create_organization.py
backend/apps/platform/rbac/: __init__.py  admin.py  apps.py  models.py
backend/apps/platform/rbac/migrations/: 0001_Initial.py  0001_initial.py  0002_seed_v1.py  0003_rename_platform_rb_categ_idx_platform_rb_categor_12db84_idx_and_more.py  _seed_runner.py
backend/apps/platform/rbac/seeds/: __init__.py  v1_capabilities.py  v1_default_roles.py
backend/apps/platform/rbac/tests/seeds/: test_seed_v1.py
backend/apps/platform/support/: __init__.py  apps.py  urls.py  views.py
backend/apps/platform/support/management/commands/: seed_dev_tenant.py
backend/apps/platform/support/tests/: test_seed_dev_tenant.py
backend/apps/tenancy/: apps.py
backend/apps/utils/: health.py
backend/apps/web/: __init__.py
backend/apps/web/auth_portal/: __init__.py  apps.py  forms.py  urls.py  views.py  views_select_org.py
backend/apps/web/auth_portal/tests/: test_allauth_template_smoke.py  test_login_scaffold.py  test_url_routing.py
backend/apps/web/landing/: __init__.py  apps.py  urls.py  views.py
backend/apps/web/landing/tests/: test_landing.py
backend/apps/web/tenant_portal/: __init__.py  apps.py
backend/config/: __init__.py  asgi.py  urls.py  wsgi.py
backend/config/settings/: __init__.py  base.py  demo.py  dev.py  prod.py  staging.py  test.py
backend/docker/django/: .dockerignore  Dockerfile
backend/docker/nginx/: .gitkeep  dev.conf
backend/docker/postgres/: .gitkeep
backend/docker/vite/: entrypoint.sh
backend/docker/workers/: .gitkeep
backend/requirements/: base.txt  dev.txt  prod.txt  test.txt
backend/static/landing/css/: dashboard.css  homepage.css
backend/templates/: base.html
backend/templates/account/: _public_base.html  _settings_base.html  base.html  email.html  email_confirm.html  login.html  logout.com  password_change.html  password_reset.html  password_reset_done.html  password_reset_from_key.html  password_reset_from_key_done.html  reauthenticate.html  signup.html  verified_email_required.html
backend/templates/account/email/: email_confirmation_message.txt  email_confirmation_subject.txt  password_reset_key_message.txt  password_reset_key_subject.txt
backend/templates/account/messages/: email_confirmation_sent.txt  email_confirmed.txt  logged_in.txt  logged_out.txt  password_changed.txt  unverified_primary_email.txt
backend/templates/auth_portal/: login.html  select_org_placeholder.html
backend/templates/console/: home.html
backend/templates/landing/: homepage.html
backend/templates/mfa/: authenticate.html  base.html  index.html
backend/templates/mfa/recovery_codes/: generate.html  index.html
backend/templates/mfa/totp/: activate_form.html  deactivate_form.html
backend/templates/rbac/: .gitkeep
backend/templates/support/: _banner.html
backend/templates/tenant_portal/: .gitkeep
docs/: .gitkeep  guide.md  handoff.md
(+30 files in other folders)
